[no-issue] feat: add logger instrumentation plugin